added image of john

--- a/website.html
+++ b/website.html
@@ -7,11 +7,20 @@
     <script src="https://cdn.tailwindcss.com"></script>
   </head>
   <body>
-    <div class="bg-black w-full py-5">
-      <h1 class="text-white text-center text-6xl my-8">I'm John Doe.</h1>
-      <p class="text-white text-center text-1xl">
-        Photographer and Web Designer.
-      </p>
+    <div class="bg-black">
+      <div class="w-full py-5">
+        <h1 class="text-white text-center text-6xl my-8">I'm John Doe.</h1>
+        <p class="text-white text-center text-1xl">
+          Photographer and Web Designer.
+        </p>
+      </div>
+      <div>
+        <img
+          src="https://www.w3schools.com/w3images/man_smoke.jpg"
+          alt="Image of John Doe"
+          width="100%"
+        />
+      </div>
     </div>
   </body>
 </html>
