--- a/website.html
+++ b/website.html
@@ -21,6 +21,38 @@
           width="100%"
         />
       </div>
+      <div class="px-10" id="About">
+        <h2 class="py-5 text-2xl text-white">My Name:</h2>
+        <hr />
+        <p class="py-3 text-lg text-white">
+          Some text about me. Some text about me. I am lorem ipsum consectetur
+          adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
+          magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation
+          ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute
+          irure dolor in reprehenderit in voluptate velit esse cillum dolore eu
+          fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident,
+          sunt in culpa qui officia deserunt mollit anim id est laborum
+          consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
+          labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud
+          exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
+        </p>
+        <div class="py-8">
+          <h3 class="py-5 text-2xl text-white">My Skills</h3>
+          <h3 class="text-white py-5">Photography</h3>
+          <div class="w-170 h-8 bg-white">
+            <div class="h-full bg-slate-700" style="width: 80%"></div>
+          </div>
+          <h3 class="text-white py-5">Web Design</h3>
+          <div class="w-170 h-8 bg-white">
+            <div class="h-full bg-slate-700" style="width: 92%"></div>
+          </div>
+          <h3 class="text-white py-5">Photoshop</h3>
+          <div class="w-170 h-8 bg-white">
+            <div class="h-full bg-slate-700" style="width: 75%"></div>
+          </div>
+        </div>
+        <div class="py-20 w-170 h-200 bg-white d-flex"></div>
+      </div>
     </div>
   </body>
 </html>
